--- a/duruyor-sanma.html
+++ b/duruyor-sanma.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <hr>
-    <a href="index.html">Ana Sayfa</a>
+    <a id="ömer" style="font-size:larger" href="index.html">Tüm Şiirler</a>
     
   
 <div class="content3" style="font-size:large;" >
