--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enver Çelik Şiirler</title>
+    <title>Enver Çelik Şiirleri</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <hr>
     
-  <H2>Enver ÇELİK Şiirleri</H2>
+  <H2>Enver Çelik Şiirleri</H2>
 
-  <ol style="font-size:larger;font-weight:500; font-weight: bold; "  >
+  <ol style="font-size:larger;font-weight:500; font-weight: bold; color:#497174;"  >
     <li>
           <a href="agladim.html">Ağladım</a>
     </li>
     <li>
           <a href="duruyor-sanma.html">Duruyor Sanma</a>
     </li>
-    <li>
-
-    </li>
+  
   </ol>
 </body>
 </html>
