şiirler eklendi,foto eklendi

--- a/duruyor-sanma.html
+++ b/duruyor-sanma.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <hr>
-    <a id="ömer" style="font-size:larger" href="index.html">Tüm Şiirler</a>
+     <button><a id="ömer" style="font-size:larger" href="index.html">Tüm Şiirler</a></button>
     
   
 <div class="content3" style="font-size:large;" >
