--- a/agladim.html
+++ b/agladim.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <hr>
-    <a id="ömer" style="font-size:larger" href="index.html">Tüm Şiirler</a>
+   <button><a id="ömer" style="font-size:larger" href="index.html">Tüm Şiirler</a></button> 
 
 <div class="content" style="font-size:large;">
     <h2> AĞLADIM</h2>
